k8s/loggerservice/logger-dependencies.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  selector:
    app: opensearch
  ports:
    - port: 9200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.19.6@sha256:8690b204fe914c60ca76d451ac73bc0481e034d32d3779944c8caca56a2b003f
          ports:
            - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: dashboards
spec:
  selector:
    app: dashboards
  ports:
    - port: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboards
  template:
    metadata:
      labels:
        app: dashboards
    spec:
      containers:
        - name: dashboards
          image: opensearchproject/opensearch-dashboards:2.19.6@sha256:7aaefffac1660cab61ecf1e52fdcde6c156587a020dfa9246d529ea5e784dcee
          ports:
            - containerPort: 5601
